clusters/kube-lab/longhorn/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    app: longhorn-system
